# C-generic-list

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: Doxyfile  changelog.md
headers/: Tlist.h  TlistPrivate.h
include/: Tlist.h  TlistPrivate.h
src/: Titerator.c  Tlist.c  iterator.c  main.c
src/lib/: test.c
src/lib/Tlist/: Tlist.c
